.k8s/emptydir-volume/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devcamper-ingress
  namespace: devcamper-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: devcamper.webapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devcamper-webapp-service
                port:
                  number: 3000
    - host: devcamper.webapi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devcamper-webapi-service
                port:
                  number: 5000
